--- a/resources/src/sass/_forms.scss
+++ b/resources/src/sass/_forms.scss
@@ -44,6 +44,8 @@ label {
   }
   input[type="search"] {
     position: absolute !important;
+    left: 0;
+    bottom: 0;
   }
   div {
     .selected-tag {
